--- a/client/src/styles/productDisplay.css
+++ b/client/src/styles/productDisplay.css
@@ -110,7 +110,7 @@
 @media (max-width: 611px) {
     .product-display {
         margin-left: 0;
-        padding-top: 3rem;
+        padding-top: 13rem;
     }
     .product-card {
         justify-self: center;
